Delete not necessary mapping in CampaignService